--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,23 +6,11 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T14:12:10.023048Z",
-     "start_time": "2022-11-21T14:12:09.735261Z"
+     "end_time": "2022-11-24T21:21:09.999847Z",
+     "start_time": "2022-11-24T21:21:09.324095Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bed_reader'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_3463/1857955960.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# from pysnptools.distreader import Bgen, DistMemMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# from pathlib import Path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbed_reader\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mopen_bed\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_open_bed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;31m# from pysnptools.snpreader import SnpData, SnpMemMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# from pysnptools.util import log_in_place\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bed_reader'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
@@ -52,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T12:18:55.673613Z",
-     "start_time": "2022-11-21T12:18:55.648989Z"
+     "end_time": "2022-11-24T22:45:46.950355Z",
+     "start_time": "2022-11-24T22:45:46.816291Z"
     }
    },
    "outputs": [],
@@ -67,8 +55,9 @@
     "                      a_min,\n",
     "                      a_max,\n",
     "                      N=500,\n",
-    "                      kernel=\"gaussian\",\n",
-    "                      bw=\"silverman\"):\n",
+    "                      kernel=\"epa\",\n",
+    "                      bw=\"silverman\",\n",
+    "                      machine_err=1e-24):\n",
     "    \"\"\"\n",
     "    calculate mutual information between continuous outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -105,7 +94,7 @@
     "    joint[:, 0] = y_cond_p0(a_temp) * p0\n",
     "    joint[:, 1] = y_cond_p1(a_temp) * p1\n",
     "    joint[:, 2] = y_cond_p2(a_temp) * p2\n",
-    "    joint[joint < 1e-22] = 1e-22  # set a threshold to avoid numerical errors\n",
+    "    joint[joint < machine_err] = machine_err  # set a threshold to avoid numerical errors\n",
     "    forward_euler_step = a_temp[1] - a_temp[0]\n",
     "    #     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
     "    temp_log = _np.log(joint)\n",
@@ -162,27 +151,24 @@
     "# make this function available\n",
     "def MI_bivariate_continuous(a,\n",
     "                            b,\n",
-    "                            a_N=301,\n",
-    "                            b_N=501,\n",
-    "                            kernel=\"gaussian\",\n",
+    "                            a_N=300,\n",
+    "                            b_N=300,\n",
+    "                            kernel=\"epa\",\n",
     "                            bw=\"silverman\",\n",
-    "                            norm=2):\n",
+    "                            norm=2, machine_err=1e-24):\n",
     "    \"\"\"\n",
     "    (Single Core version) calculate mutual information on bivariate continuous r.v..\n",
     "    \"\"\"\n",
     "    _ = np.argsort(a)\n",
     "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
     "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate((a_N, b_N))\n",
-    "    joint = joint.reshape(b_N, -1).T\n",
-    "    print(\"joint shape:\", joint.shape)\n",
+    "    joint = joint.reshape(b_N, -1).T \n",
+    "    # this gives joint as a (a_N, b_N) array, following example: https://kdepy.readthedocs.io/en/latest/examples.html#the-effect-of-norms-in-2d\n",
     "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
     "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
-    "    joint[joint < 1e-22] = 1e-22\n",
+    "    joint[joint < machine_err] = machine_err\n",
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
-    "    print(\"log_a_margianl shape:\", log_a_marginal.shape)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
-    "    print(\"log_b_margianl shape:\", log_b_marginal.shape)\n",
-    "\n",
     "    log_joint = _np.log(joint)\n",
     "    mi_temp = _np.sum(joint * (log_joint - log_a_marginal.reshape(\n",
     "        -1, 1) - log_b_marginal.reshape(1,-1))) * a_forward_euler_step * b_forward_euler_step\n",
@@ -195,7 +181,7 @@
     "                         b_min,\n",
     "                         b_max,\n",
     "                         N=500,\n",
-    "                         kernel=\"gaussian\",\n",
+    "                         kernel=\"epa\",\n",
     "                         bw=\"silverman\"):\n",
     "    return MI_continuous_SNP(a=b,\n",
     "                             b=a,\n",
@@ -215,7 +201,7 @@
     "                            a_min=1.2345654321,\n",
     "                            a_max=2.34565432,\n",
     "                            N=500,\n",
-    "                            kernel=\"gaussian\",\n",
+    "                            kernel=\"epa\",\n",
     "                            bw=\"silverman\"):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
@@ -293,7 +279,7 @@
     "                                     N=500,\n",
     "                                     core_num=\"NOT DECLARED\",\n",
     "                                     multp=1,\n",
-    "                                     kernel=\"gaussian\",\n",
+    "                                     kernel=\"epa\",\n",
     "                                     bw=\"silverman\"):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
@@ -404,7 +390,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def binary_filter_csv(csv_names=[]):\n",
+    "def binary_filter_csv(csv_names=[], N=500, kernel=\"epa\", bw=\"silverman\"):\n",
     "    if _np.array(csv_names).size == 0:\n",
     "        print(\n",
     "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
@@ -420,8 +406,13 @@
     "                 skipinitialspace=True,\n",
     "                 usecols=__,\n",
     "                 encoding='unicode_escape').dropna()\n",
-    "        MI_csv[j] = MI_binary_continuous(_[:,0], _[:,1])\n",
-    "    return csv_names, MI_csv\n",
+    "        MI_csv[j] = MI_binary_continuous(a=_[:,0], b=_[:,1],\n",
+    "                         b_min = np.min(_[:,1])-np.std(_[:,1]),\n",
+    "                         b_max = np.min(_[:,1])+np.std(_[:,1]),\n",
+    "                         N=N,\n",
+    "                         kernel=kernel,\n",
+    "                         bw=bw)\n",
+    "    return MI_csv\n",
     "\n",
     "\n",
     "def continuous_filter_csv():\n",
@@ -441,12 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T12:19:09.183494Z",
-     "start_time": "2022-11-21T12:19:09.075525Z"
+     "end_time": "2022-11-24T22:45:57.984947Z",
+     "start_time": "2022-11-24T22:45:46.954579Z"
     }
    },
    "outputs": [
@@ -454,11 +445,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.02190457790089801\n",
-      "joint shape: (301, 501)\n",
-      "log_a_margianl shape: (301,)\n",
-      "log_b_margianl shape: (501,)\n",
-      "0.7271167714296668\n"
+      "0.004420667306593115\n",
+      "0.0010108923378704799\n",
+      "0.2057681739689726 0.0010578902306832203\n",
+      "[0.19665037 0.20765675 0.20149238 0.20915676 0.19420115 0.20309203\n",
+      " 0.19189506 0.20092077 0.20624126 0.21524621 0.19251016 0.20899591\n",
+      " 0.20482374 0.20010838 0.21296618 0.20566429 0.21008501 0.21164677\n",
+      " 0.21190437 0.21398222 0.20474392 0.2025692  0.2059527  0.20338707\n",
+      " 0.2024347  0.21399576 0.20512102 0.20041197 0.20620582 0.20499534\n",
+      " 0.19634174 0.20248316 0.20182316 0.19884378 0.20128408 0.20911378\n",
+      " 0.21186764 0.19951603 0.20851031 0.20950583 0.20303601 0.21459109\n",
+      " 0.20094591 0.20061785 0.20846891 0.20568283 0.21534267 0.19937844\n",
+      " 0.21296178 0.20547831 0.20801865 0.2054691  0.20077725 0.20222824\n",
+      " 0.20739636 0.20894973 0.19490489 0.20784496 0.20147222 0.19867544\n",
+      " 0.20819772 0.20573874 0.20588939 0.2039781  0.21042278 0.20692482\n",
+      " 0.20606303 0.20662075 0.20799746 0.20689041 0.20625125 0.2007687\n",
+      " 0.21707061 0.19756141 0.20310103 0.19559443 0.20321105 0.2037693\n",
+      " 0.21179311 0.1987594  0.19965353 0.20415345 0.20852949 0.20836464\n",
+      " 0.21261924 0.20366687 0.20367978 0.20380938 0.20116576 0.20940781\n",
+      " 0.21872428 0.20040368 0.19957552 0.20060023 0.20103862 0.19787826\n",
+      " 0.19581091 0.20074214 0.21376623 0.21044803 0.21621441 0.22111728\n",
+      " 0.19413288 0.20850661 0.20058395 0.20582677 0.20478129 0.21463631\n",
+      " 0.19258253 0.21101361 0.19299685 0.20636181 0.21746402 0.21506503\n",
+      " 0.20606685 0.19915196 0.21495242 0.21558648 0.20850444 0.20020797\n",
+      " 0.20546974 0.20000744 0.20762889 0.19731798 0.205567   0.20595139\n",
+      " 0.2030905  0.20329865 0.19567747 0.19804078 0.19754031 0.20908505\n",
+      " 0.20241697 0.20991232 0.21216153 0.19534732 0.19687936 0.20260054\n",
+      " 0.19259155 0.20439531 0.20073621 0.20735385 0.21134817 0.20858773\n",
+      " 0.20700715 0.19543711 0.20348859 0.20242894 0.21385358 0.1973725\n",
+      " 0.20922397 0.20794821 0.21155824 0.208333   0.2092144  0.20897655\n",
+      " 0.21016707 0.21090776 0.2008378  0.19986512 0.20928454 0.21026099\n",
+      " 0.20168964 0.21557533 0.20311103 0.20508319 0.19947379 0.20273425\n",
+      " 0.21409142 0.20209917 0.19570509 0.19504387 0.20527572 0.19517464\n",
+      " 0.2021314  0.20061066 0.19765282 0.19343331 0.20427497 0.19358495\n",
+      " 0.20099542 0.20499172 0.19404382 0.20774288 0.2060637  0.20511385\n",
+      " 0.20444844 0.21054262 0.20236268 0.20558389 0.19996324 0.19465896\n",
+      " 0.19818084 0.19615317 0.20369395 0.1988459  0.20096428 0.20722215\n",
+      " 0.20708668 0.1988687  0.19720618 0.20454536 0.20881905 0.20230705\n",
+      " 0.20134585 0.19563285 0.21397826 0.21797391 0.19585575 0.21558797\n",
+      " 0.20874064 0.2051456  0.2106178  0.20137541 0.20619222 0.19888153\n",
+      " 0.19899564 0.20898537 0.19945852 0.20757807 0.20110402 0.18910205\n",
+      " 0.20334506 0.21647881 0.20698246 0.20662715 0.20790768 0.21774873\n",
+      " 0.20746532 0.2041154  0.19359629 0.21549391 0.19413376 0.20323123\n",
+      " 0.20951014 0.19936743 0.20792311 0.20156017 0.20691144 0.20445704\n",
+      " 0.19693941 0.20397116 0.20516075 0.20945649 0.21377752 0.21481409\n",
+      " 0.19995795 0.21295676 0.20885393 0.20112947 0.20575939 0.21513778\n",
+      " 0.20300629 0.2049677  0.21434001 0.20825261 0.20978389 0.20866662\n",
+      " 0.20686676 0.19430576 0.19869893 0.20604825 0.21562381 0.2073121\n",
+      " 0.19995358 0.21452853 0.21503675 0.20010663 0.20672425 0.1934249\n",
+      " 0.19990207 0.21272711 0.20111106 0.20368923 0.2008171  0.20388654\n",
+      " 0.20455757 0.20665644 0.20061745 0.21864889 0.19768916 0.2018179\n",
+      " 0.20562653 0.20940199 0.20513412 0.21561977 0.20274861 0.20373879\n",
+      " 0.20539935 0.20622334 0.19906693 0.20583396 0.20342244 0.19844827\n",
+      " 0.19447257 0.20276995 0.20817306 0.20268409 0.20907339 0.20568651\n",
+      " 0.19827813 0.19718851 0.20652379 0.21093768 0.20644189 0.2152821\n",
+      " 0.20288936 0.18932641 0.2096265  0.20096374 0.2058561  0.2075414\n",
+      " 0.18995114 0.20434752 0.21156521 0.1958962  0.19966763 0.20532377\n",
+      " 0.20453622 0.19955393 0.210071   0.21098864 0.19998545 0.20755392\n",
+      " 0.20007877 0.20676025 0.21195753 0.20807496 0.20843822 0.20181166\n",
+      " 0.21010636 0.20789636 0.20051679 0.19470645 0.1984124  0.20176424\n",
+      " 0.21479161 0.20376234 0.2067845  0.19332915 0.19988739 0.20418067\n",
+      " 0.20771592 0.21019803 0.20061445 0.20223639 0.20616448 0.19199599\n",
+      " 0.20542733 0.19911985 0.2056213  0.20642705 0.19884447 0.20012194\n",
+      " 0.22041404 0.20694807 0.20682941 0.20458828 0.20805652 0.20618101\n",
+      " 0.20558785 0.20732862 0.19970167 0.19152606 0.20436389 0.20048715\n",
+      " 0.20985503 0.20167192 0.20777038 0.2068448  0.20352392 0.20075507\n",
+      " 0.19783067 0.20068759 0.19340079 0.20685468 0.19692246 0.20211524\n",
+      " 0.19921889 0.2002729  0.22458583 0.21112822 0.19944537 0.20431807\n",
+      " 0.19760554 0.20256014 0.20450995 0.21147062 0.20689485 0.2105558\n",
+      " 0.20827251 0.21076774 0.21661188 0.21225726 0.19433714 0.20510012\n",
+      " 0.21598023 0.19450855 0.21277561 0.20752108 0.20675401 0.20173787\n",
+      " 0.21202892 0.20277027 0.21157544 0.20567254 0.20224598 0.21223718\n",
+      " 0.20311473 0.20345992 0.19369527 0.19344759 0.19678481 0.20791626\n",
+      " 0.19818873 0.21283121 0.19601511 0.19919254 0.19787865 0.20757033\n",
+      " 0.20307006 0.20171271 0.20150808 0.20822373 0.20412332 0.20314848\n",
+      " 0.2008553  0.20899224 0.20272199 0.20147736 0.20903612 0.21351511\n",
+      " 0.2033888  0.2039502  0.19987742 0.2019566  0.21033097 0.20305122\n",
+      " 0.20982312 0.20228305 0.20801198 0.20803825 0.19779942 0.20193266\n",
+      " 0.21140798 0.20198055 0.21622562 0.20742686 0.1971461  0.20814941\n",
+      " 0.2032678  0.20673199 0.21376191 0.19887408 0.21115041 0.20015691\n",
+      " 0.19844391 0.20693038 0.20711113 0.21091447 0.20642286 0.20771043\n",
+      " 0.20344119 0.20795766 0.21196323 0.21407642 0.20367872 0.19599233\n",
+      " 0.20781016 0.21209472 0.19780539 0.20540852 0.21291482 0.20021489\n",
+      " 0.20034315 0.1992093  0.19327744 0.20520435 0.19751702 0.19902475\n",
+      " 0.20516128 0.20517944 0.20556346 0.20731938 0.20689945 0.19842368\n",
+      " 0.21579371 0.20846526 0.20933399 0.20942266 0.20203018 0.20502874\n",
+      " 0.19975425 0.20264961 0.20947427 0.21188184 0.2011468  0.22250531\n",
+      " 0.1998967  0.20661641]\n"
      ]
     }
    ],
@@ -472,7 +545,17 @@
     "a = np.random.normal(size=2000)\n",
     "b = np.random.normal(size=2000)\n",
     "\n",
-    "print(MI_bivariate_continuous(a, b))"
+    "print(MI_bivariate_continuous(a, b))\n",
+    "a_MI = np.zeros(500)\n",
+    "b_MI = np.zeros(500)\n",
+    "for i in np.arange(500):\n",
+    "    np.random.seed(i)\n",
+    "    a = np.random.normal(size=2000)\n",
+    "    b = np.random.normal(size=2000)\n",
+    "    a_MI[i] = MI_bivariate_continuous(a, a)\n",
+    "    b_MI[i] = MI_bivariate_continuous(a, b)\n",
+    "print(np.mean(a_MI), np.mean(b_MI))\n",
+    "print(a_MI-b_MI)"
    ]
   },
   {
@@ -481,8 +564,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T12:15:27.466463Z",
-     "start_time": "2022-11-21T12:15:20.020995Z"
+     "end_time": "2022-11-24T21:21:17.490556Z",
+     "start_time": "2022-11-24T21:21:10.063926Z"
     }
    },
    "outputs": [
@@ -498,10 +581,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47894155, 0.12429307, 0.13433472, 0.00098337, 0.00184237,\n",
-       "       0.00117129, 0.001186  , 0.00169651, 0.00127239, 0.00120717,\n",
-       "       0.00187645, 0.00116754, 0.00133607, 0.00156339, 0.00149925,\n",
-       "       0.00203289, 0.00152007, 0.00164046, 0.00193518, 0.00116396])"
+       "array([0.47819885, 0.12476599, 0.13383907, 0.00092895, 0.00205855,\n",
+       "       0.00120627, 0.00093233, 0.0016023 , 0.00124484, 0.00118684,\n",
+       "       0.00220929, 0.00129694, 0.00157462, 0.00157844, 0.00161315,\n",
+       "       0.00191134, 0.00128113, 0.00191086, 0.00172114, 0.00105449])"
       ]
      },
      "execution_count": 4,
@@ -550,8 +633,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T12:15:29.829167Z",
-     "start_time": "2022-11-21T12:15:27.467653Z"
+     "end_time": "2022-11-24T21:21:19.861188Z",
+     "start_time": "2022-11-24T21:21:17.491574Z"
     }
    },
    "outputs": [
@@ -567,11 +650,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.19655405e-01, 3.46340806e-02, 4.88232958e-02, 9.84512494e-06,\n",
-       "       9.22237549e-05, 8.14027824e-04, 3.86235001e-04, 1.81639057e-04,\n",
-       "       2.48284535e-04, 7.20545712e-04, 1.70401685e-04, 6.57153104e-05,\n",
-       "       3.18932693e-04, 9.93049219e-04, 2.21345906e-05, 4.66056301e-05,\n",
-       "       4.13500779e-05, 6.82111872e-05, 7.49997112e-05, 4.01410515e-04])"
+       "array([1.13451556e-01, 3.71182060e-02, 4.63782991e-02, 3.75633377e-05,\n",
+       "       1.46876722e-04, 5.93408692e-04, 8.30733674e-04, 2.16295621e-04,\n",
+       "       5.68758566e-04, 6.74265450e-04, 8.36141781e-05, 7.87215709e-06,\n",
+       "       4.68064596e-04, 4.64006530e-04, 6.09939449e-05, 2.17268302e-05,\n",
+       "       7.85024505e-05, 2.29951500e-05, 6.19267441e-04, 8.78445880e-04])"
       ]
      },
      "execution_count": 5,
