--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -94,7 +94,9 @@
     "    joint[:, 0] = y_cond_p0(a_temp) * p0\n",
     "    joint[:, 1] = y_cond_p1(a_temp) * p1\n",
     "    joint[:, 2] = y_cond_p2(a_temp) * p2\n",
-    "    joint[joint < machine_err] = machine_err  # set a threshold to avoid numerical errors\n",
+    "    joint[\n",
+    "        joint <\n",
+    "        machine_err] = machine_err  # set a threshold to avoid numerical errors\n",
     "    forward_euler_step = a_temp[1] - a_temp[0]\n",
     "    #     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
     "    temp_log = _np.log(joint)\n",
@@ -155,14 +157,16 @@
     "                            b_N=300,\n",
     "                            kernel=\"epa\",\n",
     "                            bw=\"silverman\",\n",
-    "                            norm=2, machine_err=1e-24):\n",
+    "                            norm=2,\n",
+    "                            machine_err=1e-24):\n",
     "    \"\"\"\n",
     "    (Single Core version) calculate mutual information on bivariate continuous r.v..\n",
     "    \"\"\"\n",
     "    _ = np.argsort(a)\n",
     "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
-    "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate((a_N, b_N))\n",
-    "    joint = joint.reshape(b_N, -1).T \n",
+    "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(\n",
+    "        (a_N, b_N))\n",
+    "    joint = joint.reshape(b_N, -1).T\n",
     "    # this gives joint as a (a_N, b_N) array, following example: https://kdepy.readthedocs.io/en/latest/examples.html#the-effect-of-norms-in-2d\n",
     "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
     "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
@@ -170,8 +174,10 @@
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
     "    log_joint = _np.log(joint)\n",
-    "    mi_temp = _np.sum(joint * (log_joint - log_a_marginal.reshape(\n",
-    "        -1, 1) - log_b_marginal.reshape(1,-1))) * a_forward_euler_step * b_forward_euler_step\n",
+    "    mi_temp = _np.sum(\n",
+    "        joint *\n",
+    "        (log_joint - log_a_marginal.reshape(-1, 1) - log_b_marginal.reshape(\n",
+    "            1, -1))) * a_forward_euler_step * b_forward_euler_step\n",
     "    return mi_temp\n",
     "\n",
     "\n",
@@ -182,14 +188,16 @@
     "                         b_max,\n",
     "                         N=500,\n",
     "                         kernel=\"epa\",\n",
-    "                         bw=\"silverman\"):\n",
+    "                         bw=\"silverman\",\n",
+    "                         machine_err=1e-24):\n",
     "    return MI_continuous_SNP(a=b,\n",
     "                             b=a,\n",
     "                             a_min=b_min,\n",
     "                             a_max=b_max,\n",
     "                             N=N,\n",
     "                             kernel=kernel,\n",
-    "                             bw=bw)\n",
+    "                             bw=bw,\n",
+    "                             machine_err=machine_err)\n",
     "\n",
     "\n",
     "# outcome_iid should be a  list of strings for identifiers\n",
@@ -202,7 +210,8 @@
     "                            a_max=2.34565432,\n",
     "                            N=500,\n",
     "                            kernel=\"epa\",\n",
-    "                            bw=\"silverman\"):\n",
+    "                            bw=\"silverman\",\n",
+    "                            machine_err=1e-24):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -236,7 +245,8 @@
     "                                       a_max=a_max,\n",
     "                                       N=N,\n",
     "                                       kernel=kernel,\n",
-    "                                       bw=bw)\n",
+    "                                       bw=bw,\n",
+    "                                       machine_err=machine_err)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -280,7 +290,8 @@
     "                                     core_num=\"NOT DECLARED\",\n",
     "                                     multp=1,\n",
     "                                     kernel=\"epa\",\n",
-    "                                     bw=\"silverman\"):\n",
+    "                                     bw=\"silverman\",\n",
+    "                                     machine_err=1e-24):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -324,7 +335,8 @@
     "                                             a_max=a_max,\n",
     "                                             N=N,\n",
     "                                             kernel=kernel,\n",
-    "                                             bw=bw)\n",
+    "                                             bw=bw,\n",
+    "                                             machine_err=machine_err)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
@@ -390,34 +402,75 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def binary_filter_csv(csv_names=[], N=500, kernel=\"epa\", bw=\"silverman\"):\n",
+    "def binary_filter_csv(csv_file,\n",
+    "                      csv_names=[],\n",
+    "                      N=500,\n",
+    "                      kernel=\"epa\",\n",
+    "                      bw=\"silverman\",\n",
+    "                      machine_err=1e-24):\n",
+    "    # outcome is the first variable by default; if other specifications are needed, put it the first item in csv_names\n",
     "    if _np.array(csv_names).size == 0:\n",
     "        print(\n",
     "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
     "        )\n",
-    "        csv_names = ...\n",
+    "        csv_names = pd.read_csv(csv_file, index_col=0,\n",
+    "                                nrows=0).columns.tolist()\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        csv_names = _np.array(csv_names)\n",
-    "    MI_csv = np.empty(len(csv_names)-1)\n",
-    "    for j in np.arange(len(csv_names)-1):\n",
-    "        __ = csv_names[0, j+1]\n",
+    "    MI_csv = np.empty(len(csv_names) - 1)\n",
+    "    for j in np.arange(len(csv_names) - 1):\n",
+    "        __ = csv_names[0, j + 1]\n",
     "        _ = pd.read_csv(outcome_file,\n",
-    "                 skipinitialspace=True,\n",
-    "                 usecols=__,\n",
-    "                 encoding='unicode_escape').dropna()\n",
-    "        MI_csv[j] = MI_binary_continuous(a=_[:,0], b=_[:,1],\n",
-    "                         b_min = np.min(_[:,1])-np.std(_[:,1]),\n",
-    "                         b_max = np.min(_[:,1])+np.std(_[:,1]),\n",
-    "                         N=N,\n",
-    "                         kernel=kernel,\n",
-    "                         bw=bw)\n",
+    "                        skipinitialspace=True,\n",
+    "                        usecols=__,\n",
+    "                        encoding='unicode_escape').dropna()\n",
+    "        MI_csv[j] = MI_binary_continuous(\n",
+    "            a=_[:, 0],\n",
+    "            b=_[:, 1],\n",
+    "            b_min=np.min(_[:, 1]) - np.std(_[:, 1]),\n",
+    "            b_max=np.min(_[:, 1]) + np.std(_[:, 1]),\n",
+    "            N=N,\n",
+    "            kernel=kernel,\n",
+    "            bw=bw,\n",
+    "            machine_err=machine_err)\n",
     "    return MI_csv\n",
     "\n",
     "\n",
-    "def continuous_filter_csv():\n",
-    "    pass\n",
-    "    return\n",
+    "def continuous_filter_csv(csv_file,\n",
+    "                          csv_names=[],\n",
+    "                          a_N=300,\n",
+    "                          b_N=300,\n",
+    "                          kernel=\"epa\",\n",
+    "                          bw=\"silverman\",\n",
+    "                          norm=2,\n",
+    "                          machine_err=1e-24):\n",
+    "    # outcome is the first variable by default; if other specifications are needed, put it the first item in csv_names\n",
+    "    if _np.array(csv_names).size == 0:\n",
+    "        print(\n",
+    "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
+    "        )\n",
+    "        csv_names = pd.read_csv(csv_file, index_col=0,\n",
+    "                                nrows=0).columns.tolist()\n",
+    "        print(\"Reading variable names from csv file finished.\")\n",
+    "    else:\n",
+    "        csv_names = _np.array(csv_names)\n",
+    "    MI_csv = np.empty(len(csv_names) - 1)\n",
+    "    for j in np.arange(len(csv_names) - 1):\n",
+    "        __ = csv_names[0, j + 1]\n",
+    "        _ = pd.read_csv(outcome_file,\n",
+    "                        skipinitialspace=True,\n",
+    "                        usecols=__,\n",
+    "                        encoding='unicode_escape').dropna()\n",
+    "        MI_csv[j] = MI_bivariate_continuous(a=_[:, 0],\n",
+    "                                            b=_[:, 1],\n",
+    "                                            a_N=a_N,\n",
+    "                                            b_N=b_N,\n",
+    "                                            kernel=kernel,\n",
+    "                                            bw=bw,\n",
+    "                                            norm=norm,\n",
+    "                                            machine_err=machine_err)\n",
+    "    return MI_csv\n",
     "\n",
     "\n",
     "def binary_filter_csv_parallel():\n",
@@ -555,7 +608,7 @@
     "    a_MI[i] = MI_bivariate_continuous(a, a)\n",
     "    b_MI[i] = MI_bivariate_continuous(a, b)\n",
     "print(np.mean(a_MI), np.mean(b_MI))\n",
-    "print(a_MI-b_MI)"
+    "print(a_MI - b_MI)"
    ]
   },
   {
