--- a/logistic_SCAD_MCP_np_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE.ipynb
@@ -693,6 +693,7 @@
     "    '''\n",
     "    #     add design matrix column for the intercept, if it's not there already\n",
     "    _design_matrix = design_matrix.copy()\n",
+    "    N = _design_matrix.shape[0]\n",
     "    if add_intercept_column == True:\n",
     "        if _np.any(\n",
     "                design_matrix[:, 0] != design_matrix[0, 0]\n",
@@ -842,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
