--- a/LM_SCAD_MCP_cp_MODULE.ipynb
+++ b/LM_SCAD_MCP_cp_MODULE.ipynb
@@ -480,6 +480,7 @@
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    #     add design matrix column for the intercept, if it's not there already\n",
+    "    N = design_matrix.shape[0]\n",
     "    if add_intercept_column == True:\n",
     "        if _cp.any(\n",
     "                X[:, 0] != X[0, 0]\n",
@@ -699,7 +700,7 @@
     "    '''\n",
     "    #     add design matrix column for the intercept, if it's not there already\n",
     "    _design_matrix = design_matrix.copy()\n",
-    "    N = _design_matrix.shape[0]\n",
+    "    N = design_matrix.shape[0]\n",
     "    if add_intercept_column == True:\n",
     "        if _cp.any(\n",
     "                design_matrix[:, 0] != design_matrix[0, 0]\n",
