--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -625,7 +625,64 @@
     "        MI_csv = pl.map(_binary_filter_csv_slice,\n",
     "                        _np.array_split(ind, core_num * multp))\n",
     "    MI_csv = _np.hstack(MI_csv)\n",
-    "    return MI_csv"
+    "    return MI_csv\n",
+    "\n",
+    "\n",
+    "def Pearson_filter_csv_parallel(csv_file,\n",
+    "                                _usecols=[],\n",
+    "                                core_num=\"NOT DECLARED\",\n",
+    "                                multp=1):\n",
+    "    \"\"\"\n",
+    "    (Multiprocessing version) Take a (potentionally large) csv file to calculate the Pearson's correlation between outcome and covariates.\n",
+    "    If _usecols is given, the returned Pearson correlation will match _usecols. \n",
+    "    By default, the left first covariate should be the outcome -- use _usecols to adjust if not the case.\n",
+    "    \"\"\"\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(\n",
+    "        ), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "\n",
+    "    if _np.array(_usecols).size == 0:\n",
+    "        print(\n",
+    "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
+    "        )\n",
+    "        _usecols = _pd.read_csv(csv_file, index_col=0,\n",
+    "                                nrows=0).columns.tolist()\n",
+    "        print(\"Reading variable names from csv file finished.\")\n",
+    "    else:\n",
+    "        _usecols = _np.array(_usecols)\n",
+    "\n",
+    "    def _Pearson_filter_csv_slice(_slice):\n",
+    "        import _numpy as _np\n",
+    "        _pearson_slice = _np.zeros(\n",
+    "            len(_slice))  # returned MI should be of the same length as slice\n",
+    "        k = 0\n",
+    "        for j in _slice:\n",
+    "            __ = [\n",
+    "                _usecols[0], _usecols[j]\n",
+    "            ]  # here using _usecol[j] because only input variables indices were splitted\n",
+    "            _ = _pd.read_csv(csv_file,\n",
+    "                             skipinitialspace=True,\n",
+    "                             usecols=__,\n",
+    "                             encoding='unicode_escape').dropna()\n",
+    "            _a = _[_usecols[0]].to_numpy()\n",
+    "            _b = _[_usecols[j]].to_numpy()\n",
+    "            # returned Pearson correlation is a symmetric matrix\n",
+    "            _pearson_slice[k] = _np.corrcoef(_a, _b)[0, 1]\n",
+    "            k += 1\n",
+    "        return _pearson_slice\n",
+    "\n",
+    "    # multiprocessing starts here\n",
+    "    ind = _np.arange(\n",
+    "        1, len(_usecols)\n",
+    "    )  # starting from 1 because the first left column should be the outcome\n",
+    "    with _mp.Pool(core_num) as pl:\n",
+    "        Pearson_csv = pl.map(_Pearson_filter_csv_slice,\n",
+    "                             _np.array_split(ind, core_num * multp))\n",
+    "    Pearson_csv = _np.hstack(Pearson_csv)\n",
+    "    return Pearson_csv"
    ]
   },
   {
@@ -1029,6 +1086,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "a = continuous_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "b = Pearson_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
     "plt.plot(a)\n",
     "plt.show()"
    ]
@@ -1136,7 +1194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
