--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:05.094601Z",
-     "start_time": "2023-01-04T19:43:04.689174Z"
+     "end_time": "2023-01-05T11:41:18.052999Z",
+     "start_time": "2023-01-05T11:41:17.610743Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:05.131381Z",
-     "start_time": "2023-01-04T19:43:05.095977Z"
+     "end_time": "2023-01-05T11:41:18.091331Z",
+     "start_time": "2023-01-05T11:41:18.054276Z"
     }
    },
    "outputs": [],
@@ -655,7 +655,6 @@
     "        _usecols = _np.array(_usecols)\n",
     "\n",
     "    def _Pearson_filter_csv_slice(_slice):\n",
-    "        import _numpy as _np\n",
     "        _pearson_slice = _np.zeros(\n",
     "            len(_slice))  # returned MI should be of the same length as slice\n",
     "        k = 0\n",
@@ -691,8 +690,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:19.220389Z",
-     "start_time": "2023-01-04T19:43:05.132919Z"
+     "end_time": "2023-01-05T11:41:31.469097Z",
+     "start_time": "2023-01-05T11:41:18.092710Z"
     }
    },
    "outputs": [
@@ -700,8 +699,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0009711344661209329\n",
-      "0.0009404842013447417\n",
+      "0.005538809150464338\n",
+      "0.0014490268737493877\n",
       "0.2057681739689726 0.0010578902306832203\n",
       "[0.19665037 0.20765675 0.20149238 0.20915676 0.19420115 0.20309203\n",
       " 0.19189506 0.20092077 0.20624126 0.21524621 0.19251016 0.20899591\n",
@@ -819,8 +818,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:23.708991Z",
-     "start_time": "2023-01-04T19:43:19.221457Z"
+     "end_time": "2023-01-05T11:41:36.015394Z",
+     "start_time": "2023-01-05T11:41:31.470297Z"
     }
    },
    "outputs": [
@@ -888,8 +887,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:25.943277Z",
-     "start_time": "2023-01-04T19:43:23.710088Z"
+     "end_time": "2023-01-05T11:41:38.283932Z",
+     "start_time": "2023-01-05T11:41:36.016492Z"
     }
    },
    "outputs": [
@@ -954,8 +953,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:43:25.947025Z",
-     "start_time": "2023-01-04T19:43:25.944655Z"
+     "end_time": "2023-01-05T11:41:38.287509Z",
+     "start_time": "2023-01-05T11:41:38.285127Z"
     }
    },
    "outputs": [],
@@ -1018,8 +1017,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:45:05.641019Z",
-     "start_time": "2023-01-04T19:43:25.948351Z"
+     "end_time": "2023-01-05T11:43:13.444859Z",
+     "start_time": "2023-01-05T11:41:38.288535Z"
     }
    },
    "outputs": [
@@ -1057,8 +1056,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:45:17.771195Z",
-     "start_time": "2023-01-04T19:45:05.642048Z"
+     "end_time": "2023-01-05T11:43:35.363466Z",
+     "start_time": "2023-01-05T11:43:13.445934Z"
     }
    },
    "outputs": [
@@ -1066,6 +1065,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\n",
+      "Reading variable names from csv file finished.\n",
       "Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\n",
       "Reading variable names from csv file finished.\n"
      ]
@@ -1097,8 +1098,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:50:32.371235Z",
-     "start_time": "2023-01-04T19:45:17.772994Z"
+     "end_time": "2023-01-05T11:48:38.951738Z",
+     "start_time": "2023-01-05T11:43:35.365415Z"
     }
    },
    "outputs": [
@@ -1136,8 +1137,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-04T19:51:10.024237Z",
-     "start_time": "2023-01-04T19:50:32.372193Z"
+     "end_time": "2023-01-05T11:49:16.949936Z",
+     "start_time": "2023-01-05T11:48:38.952890Z"
     }
    },
    "outputs": [
@@ -1194,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
