--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -245,9 +245,9 @@
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
     "    if a_min == \"not given\":\n",
-    "        a_min = _np.min(outcome)\n",
+    "        a_min = _np.min(outcome) - machine_err\n",
     "    if a_max == \"not given\":\n",
-    "        a_max = _np.max(outcome)\n",
+    "        a_max = _np.max(outcome) + machine_err\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
@@ -337,9 +337,9 @@
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
     "    if a_min == \"not given\":\n",
-    "        a_min = _np.min(outcome)\n",
+    "        a_min = _np.min(outcome) - machine_err\n",
     "    if a_max == \"not given\":\n",
-    "        a_max = _np.max(outcome)\n",
+    "        a_max = _np.max(outcome) + machine_err\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
@@ -1044,12 +1044,12 @@
     }
    ],
    "source": [
-    "# single-thread continuous version\n",
-    "import matplotlib.pyplot as plt\n",
+    "# # single-thread continuous version\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "a = continuous_filter_csv(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
-    "plt.plot(a)\n",
-    "plt.show()"
+    "# a = continuous_filter_csv(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "# plt.plot(a)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -1125,12 +1125,12 @@
     }
    ],
    "source": [
-    "# single-thread binary version\n",
-    "import matplotlib.pyplot as plt\n",
+    "# # single-thread binary version\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "a = binary_filter_csv(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
-    "plt.plot(a)\n",
-    "plt.show()"
+    "# a = binary_filter_csv(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
+    "# plt.plot(a)\n",
+    "# plt.show()"
    ]
   },
   {
