some numerical fixes

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:20.773406Z",
-     "start_time": "2023-01-08T10:38:20.333315Z"
+     "end_time": "2023-01-08T18:06:20.605505Z",
+     "start_time": "2023-01-08T18:06:20.134566Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:20.818754Z",
-     "start_time": "2023-01-08T10:38:20.775078Z"
+     "end_time": "2023-01-08T18:06:20.651641Z",
+     "start_time": "2023-01-08T18:06:20.607141Z"
     }
    },
    "outputs": [],
@@ -95,20 +95,19 @@
     "    joint[:, 0] = y_cond_p0(a_temp) * p0\n",
     "    joint[:, 1] = y_cond_p1(a_temp) * p1\n",
     "    joint[:, 2] = y_cond_p2(a_temp) * p2\n",
-    "    joint[\n",
-    "        joint <\n",
-    "        machine_err] = machine_err  # set a threshold to avoid numerical errors\n",
+    "    mask = joint < machine_err\n",
     "    forward_euler_step = a_temp[1] - a_temp[0]\n",
+    "    joint[mask] = 0.\n",
     "    # to scale the cdf to 1.\n",
     "    joint /= _np.sum(joint) * forward_euler_step\n",
     "    #     print(\"total measure:\",  _np.sum(joint)*forward_euler_step)\n",
     "    temp_log = _np.log(joint)\n",
-    "    #     temp_log =  _np.nan_to_num(temp_log, nan = 0)\n",
+    "    temp_log = _np.nan_to_num(temp_log, nan=0)\n",
     "    temp1 = _np.log(_np.sum(joint, 1))\n",
-    "    #     temp1 =  _np.nan_to_num(temp1, nan = 0)\n",
+    "    temp1 = _np.nan_to_num(temp1, nan=0)\n",
     "    temp_log = temp_log - temp1.reshape(-1, 1)\n",
     "    temp2 = _np.log(_np.sum(joint, 0)) + _np.log(forward_euler_step)\n",
-    "    #     temp2 =  _np.nan_to_num(temp2, nan = 0)\n",
+    "    temp2 = _np.nan_to_num(temp2, nan=0)\n",
     "    temp_log = temp_log - temp2.reshape(1, -1)\n",
     "    # print(fhat_mat * temp_log)\n",
     "    temp_mat = joint * temp_log\n",
@@ -183,12 +182,16 @@
     "    # this gives joint as a (a_N, b_N) array, following example: https://kdepy.readthedocs.io/en/latest/examples.html#the-effect-of-norms-in-2d\n",
     "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
     "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
-    "    joint[joint < machine_err] = machine_err\n",
+    "    mask = joint < machine_err\n",
+    "    joint[mask] = 0.\n",
     "    # to scale the cdf to 1.\n",
     "    joint /= _np.sum(joint) * a_forward_euler_step * b_forward_euler_step\n",
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
+    "    log_a_marginal = _np.nan_to_num(log_a_marginal, nan=0)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
+    "    log_b_marginal = _np.nan_to_num(log_b_marginal, nan=0)\n",
     "    log_joint = _np.log(joint)\n",
+    "    log_joint = _np.nan_to_num(log_joint, nan=0)\n",
     "    mi_temp = _np.sum(\n",
     "        joint *\n",
     "        (log_joint - log_a_marginal.reshape(-1, 1) - log_b_marginal.reshape(\n",
@@ -718,8 +721,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:34.961670Z",
-     "start_time": "2023-01-08T10:38:20.820280Z"
+     "end_time": "2023-01-08T18:06:35.297213Z",
+     "start_time": "2023-01-08T18:06:20.653079Z"
     }
    },
    "outputs": [
@@ -727,8 +730,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00117217849660715\n",
-      "0.0021585087295792078\n",
+      "0.007935209287218139\n",
+      "0.0019377475656352336\n",
       "0.11484453582966159 0.0018942218779887813\n",
       "[0.11615635 0.11552134 0.11982114 0.10953423 0.11004535 0.11025144\n",
       " 0.10835065 0.11215228 0.11198411 0.1140639  0.11994023 0.11439836\n",
@@ -846,8 +849,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:39.738750Z",
-     "start_time": "2023-01-08T10:38:34.963283Z"
+     "end_time": "2023-01-08T18:06:40.333448Z",
+     "start_time": "2023-01-08T18:06:35.298200Z"
     }
    },
    "outputs": [
@@ -857,7 +860,9 @@
      "text": [
       "[1. 0. 1. ... 2. 1. 1.]\n",
       "[1. 2. 0. ... 0. 2. 1.]\n",
-      "[2. 1. 2. ... 2. 2. 2.]\n"
+      "[2. 1. 2. ... 2. 2. 2.]\n",
+      "[0.46183248 0.12425994 0.13479552 0.00090399 0.00197724 0.00115157\n",
+      " 0.0010699  0.00164406 0.0011932  0.0010933 ]\n"
      ]
     }
    ],
@@ -894,7 +899,8 @@
     "                                                 outcome_iid=outcome_iid,\n",
     "                                                 machine_err=1e-8)\n",
     "\n",
-    "assert np.all(MI_continuous > 0)"
+    "assert np.all(MI_continuous > 0)\n",
+    "print(MI_continuous[:10])"
    ]
   },
   {
@@ -903,8 +909,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:41.941797Z",
-     "start_time": "2023-01-08T10:38:39.740001Z"
+     "end_time": "2023-01-08T18:06:42.532094Z",
+     "start_time": "2023-01-08T18:06:40.335077Z"
     }
    },
    "outputs": [
@@ -914,7 +920,10 @@
      "text": [
       "[1. 0. 1. ... 2. 1. 1.]\n",
       "[1. 2. 0. ... 0. 2. 1.]\n",
-      "[2. 1. 2. ... 2. 2. 2.]\n"
+      "[2. 1. 2. ... 2. 2. 2.]\n",
+      "[1.10869602e-01 3.87157672e-02 4.41160271e-02 1.57533119e-04\n",
+      " 5.39010276e-04 1.00382788e-04 5.03710443e-04 1.13958648e-03\n",
+      " 1.48190962e-04 4.10339021e-04]\n"
      ]
     }
    ],
@@ -946,7 +955,8 @@
     "                                         outcome=outcome,\n",
     "                                         outcome_iid=outcome_iid)\n",
     "\n",
-    "assert np.all(MI_binary > 0)"
+    "assert np.all(MI_binary > 0)\n",
+    "print(MI_binary[:10])"
    ]
   },
   {
@@ -955,8 +965,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:38:41.945949Z",
-     "start_time": "2023-01-08T10:38:41.943164Z"
+     "end_time": "2023-01-08T18:06:42.535830Z",
+     "start_time": "2023-01-08T18:06:42.533362Z"
     }
    },
    "outputs": [],
@@ -1019,8 +1029,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:40:16.370952Z",
-     "start_time": "2023-01-08T10:38:41.946877Z"
+     "end_time": "2023-01-08T18:08:19.783396Z",
+     "start_time": "2023-01-08T18:06:42.536880Z"
     }
    },
    "outputs": [
@@ -1044,12 +1054,12 @@
     }
    ],
    "source": [
-    "# # single-thread continuous version\n",
-    "# import matplotlib.pyplot as plt\n",
+    "# single-thread continuous version\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# a = continuous_filter_csv(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
-    "# plt.plot(a)\n",
-    "# plt.show()"
+    "a = continuous_filter_csv(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "plt.plot(a)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1058,8 +1068,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:40:37.974320Z",
-     "start_time": "2023-01-08T10:40:16.372156Z"
+     "end_time": "2023-01-08T18:08:41.999217Z",
+     "start_time": "2023-01-08T18:08:19.784732Z"
     }
    },
    "outputs": [
@@ -1100,8 +1110,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:45:39.693933Z",
-     "start_time": "2023-01-08T10:40:37.975963Z"
+     "end_time": "2023-01-08T18:13:46.016606Z",
+     "start_time": "2023-01-08T18:08:42.001021Z"
     }
    },
    "outputs": [
@@ -1125,12 +1135,12 @@
     }
    ],
    "source": [
-    "# # single-thread binary version\n",
-    "# import matplotlib.pyplot as plt\n",
+    "# single-thread binary version\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# a = binary_filter_csv(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
-    "# plt.plot(a)\n",
-    "# plt.show()"
+    "a = binary_filter_csv(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
+    "plt.plot(a)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1139,8 +1149,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-08T10:46:17.823647Z",
-     "start_time": "2023-01-08T10:45:39.695472Z"
+     "end_time": "2023-01-08T18:14:23.449207Z",
+     "start_time": "2023-01-08T18:13:46.017733Z"
     }
    },
    "outputs": [
