--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -248,9 +248,9 @@
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
     "    if a_min == \"not given\":\n",
-    "        a_min = _np.min(outcome) - machine_err\n",
+    "        a_min = _np.min(outcome) - _np.std(outcome)\n",
     "    if a_max == \"not given\":\n",
-    "        a_max = _np.max(outcome) + machine_err\n",
+    "        a_max = _np.max(outcome) + _np.std(outcome)\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
@@ -340,9 +340,9 @@
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
     "    if a_min == \"not given\":\n",
-    "        a_min = _np.min(outcome) - machine_err\n",
+    "        a_min = _np.min(outcome) - _np.std(outcome)\n",
     "    if a_max == \"not given\":\n",
-    "        a_max = _np.max(outcome) + machine_err\n",
+    "        a_max = _np.max(outcome) + _np.std(outcome)\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
